Refactor and extend restaurant management system
- Updated `DeliveryPerson` and `Manager` classes to include
  restaurant affiliation and improved `DisplayInfo()` methods.
- Refactored `Employee` class to make `IsOrderComplete()`
  a non-pure virtual function.
- Removed unused `Market` class.
- Added `SetDeliveryPeople()` method in `Restaurant` for
  managing delivery personnel.
- Introduced a new `System` class to handle object creation,
  relationships, and memory management for restaurants,
  managers, delivery people, and menu items.
- Updated project files to include `System` class.

--- a/RestaurantProject/RestaurantProject.vcxproj.filters
+++ b/RestaurantProject/RestaurantProject.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="Order.h">
       <Filter>Business</Filter>
     </ClInclude>
+    <ClInclude Include="System.h">
+      <Filter>Business</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -80,6 +83,9 @@
       <Filter>People</Filter>
     </ClCompile>
     <ClCompile Include="Restaurant.cpp">
+      <Filter>Business</Filter>
+    </ClCompile>
+    <ClCompile Include="System.cpp">
       <Filter>Business</Filter>
     </ClCompile>
   </ItemGroup>
