--- a/RestaurantProject/RestaurantProject.vcxproj
+++ b/RestaurantProject/RestaurantProject.vcxproj
@@ -129,6 +129,7 @@
     <ClInclude Include="Employee.h" />
     <ClInclude Include="FoodItem.h" />
     <ClInclude Include="Manager.h" />
+    <ClInclude Include="System.h" />
     <ClInclude Include="MenuItem.h" />
     <ClInclude Include="Order.h" />
     <ClInclude Include="Restaurant.h" />
@@ -145,6 +146,7 @@
     <ClCompile Include="MenuItem.cpp" />
     <ClCompile Include="Order.cpp" />
     <ClCompile Include="Restaurant.cpp" />
+    <ClCompile Include="System.cpp" />
     <ClCompile Include="User.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
